k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  namespace: ecommerce
  annotations:
    # Gọi thằng ClusterIssuer ở bước 2 ra làm việc
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://haadtech.shop"
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  ingressClassName: nginx
  # Khai báo xài SSL (TLS)
  tls:
  - hosts:
    - api.haadtech.shop
    secretName: api-haadtech-tls
  rules:
  # Ép ông gác cổng chỉ nhận khách từ đường link này
  - host: api.haadtech.shop
    http:
      paths:
      - path: /api/auth(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: auth-service
            port:
              number: 3001
      - path: /api/ai(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: ai-service
            port:
              number: 3002
      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: core-service
            port:
              number: 3003
